# zephyr

./: .dockerignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  pyproject.toml  railway.json
app/: main.py  web.py
docs/: COMMENT_CA_MARCHE.md
examples/: plan_exemple.dxf
scripts/: make_sample_dxf.py  run_web.sh
src/zephyr/: builders.py  presets.py  study.py
src/zephyr/geometry/: __init__.py
src/zephyr/ingestion/: __init__.py
src/zephyr/report/: __init__.py  pdf_chrome.py
src/zephyr/roi/: engine.py  parameters.py  sensitivity.py
src/zephyr/rules/: __init__.py
src/zephyr/schemas/: __init__.py  building.py  results.py
src/zephyr/thermal/: __init__.py
src/zephyr/viz/: __init__.py
src/zephyr/web/: __init__.py
tests/unit/: test_ingestion_geometry.py  test_integration_thermal_roi.py  test_llm.py  test_presets.py  test_roi.py  test_rules.py  test_sensitivity.py  test_study.py  test_viz_zones.py  test_web.py  test_web_e2e.py
