[project]
name = "zephyr"
version = "0.1.0"
description = "Zéphyr — moteur de pré-étude de faisabilité VNC (Ventilation Naturelle Contrôlée)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Zéphyr" }]

# Dépendances runtime du moteur. Cf. CLAUDE.md §5.
# Note : les briques lourdes (CAO, climat, rapport, UI) sont en extras
# pour garder un `uv sync` cœur léger et testable (schemas + roi + thermal).
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "pandas>=2.1",
    "SALib>=1.5",
]

[project.optional-dependencies]
cao = [
    "ezdxf>=1.1",
    "shapely>=2.0",
    "networkx>=3.2",
]
climate = [
    "pvlib>=0.10",
]
llm = [
    "anthropic>=0.40",
]
report = [
    "weasyprint>=60",
]
viz = [
    "matplotlib>=3.7",
]
pdf = [
    "pymupdf>=1.24",
]
app = [
    "fastapi>=0.110",
    "streamlit>=1.32",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]
# Méta-extra : tout le runtime « v1 interne ».
full = [
    "zephyr[cao,climate,llm,report,viz,app,pdf]",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zephyr"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# JS/CSS embarqués (éditeur de plan) : lignes longues inévitables.
"src/zephyr/web/__init__.py" = ["E501"]
# Chaînes de formules financières (ROI à livre ouvert) : lignes longues lisibles.
"src/zephyr/roi/engine.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
